Fix vertical layout on small devices.
Align right does only work in horizontal layout, which breaks at this
point.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,8 @@ $nprogress-color: #fff;
 .navbar {
   margin-bottom: 20px;
 }
-
-dl.row dt {
-  text-align: right;
+@media (min-width: 768px) {
+  dl.row dt {
+    text-align: right;
+  }
 }
